# Carbify.io

./: .gitignore  README.md  docker-compose.yml  env.example  package.json  pyproject.toml  test_api.py  vercel.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  requirements.txt  run.py
backend/app/: __init__.py  auth.py  config.py  constants.py  database.py  limiter.py  main.py  models.py  schemas.py
backend/app/routes/: __init__.py  analytics.py  auth.py  calculator.py  challenges.py  habits.py
backend/app/utils/: __init__.py  calculations.py
backend/tests/: __init__.py  conftest.py  test_analytics.py  test_analytics_trend.py  test_auth.py  test_calculations.py  test_calculator.py  test_challenges.py  test_config.py  test_habits.py  test_health.py
frontend/: Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  vitest.config.js
frontend/src/: index.html
frontend/src/css/: styles.css
frontend/src/js/: app.js  auth.js  auth.test.js  calculator.js  calculator.test.js  charts.js  constants.js  habits.js  ui.js  ui.test.js
scripts/: smoke_test.py
